fix shadow menu on IE

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -65,8 +65,8 @@ section{
     top: 38px;
     z-index: 120;
     cursor: pointer;
-    -webkit-filter: drop-shadow( 3px 3px 0px #000);
-    filter: drop-shadow( 3px 3px 0px #000);
+    // -webkit-filter: drop-shadow( 3px 3px 0px #000);
+    // filter: drop-shadow( 3px 3px 0px #000);
     transition-duration: 0.2s;
     cursor: pointer;
     display: inline-block;
@@ -76,6 +76,7 @@ section{
         position: absolute;
         top: 14px;
         left: 12px;
+        z-index: 9;
         -webkit-transform: rotate(0deg);
         -moz-transform: rotate(0deg);
         -o-transform: rotate(0deg);
@@ -127,6 +128,14 @@ section{
             }
         }
     }
+    .shadow-menu{
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        opacity: 1;
+        transition-duration: 0.2s;
+    }
     &.open #nav-icon4 span:nth-child(1) {
         -webkit-transform: rotate(45deg);
         -moz-transform: rotate(45deg);
@@ -150,15 +159,19 @@ section{
         left: 3px;
         width: 100%;
     }
-    &:hover {
-        -webkit-filter: drop-shadow( 0px 0px 0px #000);
-        filter: drop-shadow( 0px 0px 0px #000);
+    &:hover .content-icon-menu{
+        // -webkit-filter: drop-shadow( 0px 0px 0px #000);
+        // filter: drop-shadow( 0px 0px 0px #000);
         transition-duration: 0.2s;
         -ms-transform: translate(3px, 3px);
         /* IE 9 */
         -webkit-transform: translate(3px, 3px);
         /* Safari */
         transform: translate(3px, 3px);
+    }
+    &:hover .shadow-menu{
+        opacity: 0;
+        transition-duration: 0.2s;
     }
     &:hover span {
         width: 100% !important;
